<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/layout_width"
        android:layout_height="@dimen/layout_height"
        android:src="@drawable/aroundshapeobjects"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/image_layout_marginStart"
        android:layout_marginEnd="@dimen/image_layout_marginEnd"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/image_layout_marginTop"
        />

    <TextView
        android:id="@+id/EducationApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Education_App"
        android:textSize="@dimen/textSize_Education_App"
        android:layout_below="@id/image"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:layout_marginStart="@dimen/layout_marginStart"
        android:layout_marginEnd="@dimen/layout_marginEnd"
        android:textColor="@color/hex2"
        />

    <TextView
        android:id="@+id/EducationApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Education_App2"
        android:textSize="@dimen/textSize_Education_App2"
        android:layout_below="@id/EducationApp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:layout_marginStart="@dimen/layout_marginStart2"
        android:layout_marginEnd="@dimen/layout_marginEnd2"
        android:textColor="@color/hex"
        android:layout_marginBottom="52dp"
        />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_start"
        android:layout_width="@dimen/get_start_layout_width"
        android:layout_height="@dimen/get_start_layout_height"
        android:layout_below="@id/EducationApp2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/layout_marginStart2"
        android:layout_marginEnd="@dimen/layout_marginEnd2"
        android:background="@drawable/get_start_login_shap"
        android:text="@string/get_start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        android:layout_marginBottom="@dimen/layout_marginBottom"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login"
        android:layout_width="@dimen/get_start_layout_width"
        android:layout_height="@dimen/get_start_layout_height"
        android:layout_below="@id/get_start"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/layout_marginStart2"
        android:layout_marginEnd="@dimen/layout_marginEnd2"
        android:background="@drawable/get_start_login_shap"
        android:backgroundTint="@color/hex4"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize"
        />



</RelativeLayout>